# python-gendiff

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml
__tests__/: test_gendiff.py
__tests__/fixtures/: after.ini  after.yml  before.ini  before.yml  expectedJSON.txt  expectedPlain.txt
gendiff/: __init__.py  cli.py  gendiff.py  generate_diff.py  parser.py
gendiff/diff_generators/: stylish.py
gendiff/formatters/: diff.py  json.py  plain.py  stylish.py
gendiff/scripts/: launch_gendiff.py  launch_stylish.py
gendiff/utils/: flatten.py  stringify.py
tests/: test_gendiff.py
tests/fixtures/: after.yml  before.json  before.yml  expectedJSON.txt  expectedPlain.txt  expectedStylish.txt
